auto-verify-algo: Do not clear property with only one satellite connected